--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework</title>
 </head>
-<link rel="stylesheet" href="./css/style.css">
+
 <body>
     <nav>
         <ul>
-      <a class="center" href="#">lifestyle</a>
-      <a class="center" href="#">photodiary</a>
-      <a class="center" href="#">music</a>
-      <a class="center" href="#">travel</a>  
+      <li><a class="center" href="#">lifestyle</a></li>
+      <li><a class="center" href="#">photodiary</a></li>
+      <li><a class="center" href="#">music</a></li>
+      <li><a class="center" href="#">travel</a></li>
     </ul>
     </nav>
     <div class="blocks"> 
         <div class="row">
             <div class="img-block">
-                <img src="./img/1.png" alt="fax" class="photo">
+                <img src="./img/1.png" alt="fax" class="photo"><img>
 
                 <p>lifestyle</p>
                 <h2>More than just a music fastival</h2>
@@ -31,7 +31,7 @@
                     fugiat dignissimos.</p>
             </div>
             <div class="img-block">
-                <img src="./img/2.png" alt="fax" class="photo">
+             <img src="./img/2.png" alt="fax" class="photo">
                 <p>lifestyle</p>
                 <h2>Life tastes better with coffe</h2>
                 <p class="text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti saepe explicabo
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
          <div class="block">
-           <img src="./img/3.png" alt="li" class="photo">
+            <img src="./img/3.png" alt="li" class="photo">
             <p>photodiary</p>
             <h2>American dream</h2>
             <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus ullam, vel
